Version 7.3.1
=============
Bug Fixes
* The dockbar's parent for dock containers was set incorrectly. The wrong 
   dockbar could be destroyed when a dock container was destroyed.   
* Corrected variable initialisation in CMenuMetrics
* Adjusted text position in Windows 7 menus.
* Several minor bug fixes to CString
* CSocket now works for WinCE
* CSocket send and receive functions now use char and support binary data.
* Fixed CMenu::GetMenuString
	 
New Features and Enhancements
* TRACE now accepts both ANSI and Unicode strings.
* CFile functions are now virtual
* Frames now use IDW_READY for the "Ready" string
* Added project files for VS2013
* Added CWnd::OnClose. Called automatically when a window asks to be closed.
* Added CWnd::OnDestroy. Called automatically when a window is destroyed.
* CWnd::CreateWindowEx now uses HMENU or UINT instead of CMenu*. This allows 
   the menu parameter to specify a menu for a parent window, or a window ID
   for a child window.



Changes in detail
-----------------
- Added CRect operator LPCRECT()
- Added CTab::SetFont
- Added CWnd::GetDlgCtrlID
- Added CWnd::OnClose
- Added CWnd::OnDestroy
- Modified CFile::OpenFileDialog   		Added Title argument	
- Modified CFile::SaveFileDialog		Added Title argument
- Modified CMDIChild::OnClose           now returns void.
- Modified CSocket::Receive             uses char instead of TCHAR
- Modified CSocket::RecieveFrom         uses char instead of TCHAR
- Modified CSocket::Send                uses char instead of TCHAR
- Modified CSocket::SendTo              uses char instead of TCHAR
- Modified CString  operator == 		now accepts const
- Modified CString  operator != 		now accepts const
- Modified CString  operator [] 		now accepts const
- Modified CWnd::CreateEx               now uses HMENU instead of CMenu*
- Modified CWnd::DeferWindowPos			now uses CWnd* for second argument

Added IDW_READY resource for ready string.
Added VS2013 project files