@@ -36,7 +36,7 @@ int main()
 	}
 
 	// Connect to the server
-	if (SOCKET_ERROR == Client.Connect("127.0.0.1", "3000"))
+	if (SOCKET_ERROR == Client.Connect("127.0.0.1", 3000))
 	{
 		cout << "Failed to connect to server. Was it running?\n";
 		return 0;
