@@ -36,7 +36,7 @@ int main()
 	}
 
 	// Bind the IP address and port# to the main socket
-	if (SOCKET_ERROR == Server.Bind("127.0.0.1", "3000"))
+	if (SOCKET_ERROR == Server.Bind("127.0.0.1", 3000))
 	{
 		cout << "Failed to bind IP address to socket\n" ;
 		return 0;
